# erpnext-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  mcp.json.example  pyproject.toml
docs/: api-reference.md  development-notes.md  testing.md
src/erpnext_mcp/: client.py  server.py  types.py
tests/: test_integration.py
